Limited logs and fixed bugs
500 is already way too much, but it's better than >1000 which crashed the website. Also fixed:
- Front page when all are live / offline display notf
- Subsection scale correctly on mobile now
- Broadcaster can now add LurkerLogs to their channel instead of just moderators
- Load logs page on current date logs instead of all to reduce load
- Removed unused console.log()s
- Removed Herobrine

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -125,6 +125,12 @@ a:hover {
   width: 70%;
 }
 
+@media only screen and (max-width: 1300px) {
+  .subSection {
+    width: 70%;
+  }
+}
+
 @media only screen and (max-width: 1050px) {
   #profileImg {
     width: 100%;
